<resources>
    <string name="app_name">ediaries</string>
    <string name="email">Email</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasenya">Contraseña</string>
    <string name="confirmar_contrasenya">Confirmar contraseña</string>
    <string name="anyadir_foto">Añadir foto</string>
    <string name="siguiente">Siguiente</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="icono_para_foto_usuario">Icono para foto usuario</string>
    <string name="nombre">Nombre</string>
    <string name="altura_m">Altura (m)</string>
    <string name="sexo">Sexo</string>
    <string name="comienza_tu_diario">Comienza tu diario</string>
    <string name="has_olvidado_tu_contrasenya">¿Has olvidado tu contraseña?</string>
    <string name="mm_dd_yy">mm/dd/yy</string>
    <string name="apellidos">Apellidos</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="registrarse">Registrarse</string>
    <string name="nivel_academico">Nivel académico</string>
    <string name="has_repetido_alguna_vez">¿Has repetido alguna vez?</string>
    <string name="centro_educativo">Centro educativo</string>
    <string name="si">Si</string>
    <string name="tienes_tdah">¿Tienes TDAH?</string>
    <string name="indica_si_tienes_alguna_enfermedad">Indica si tienes alguna enfermedad</string>
    <string name="indica_si_recibes_alg_n_tipo_de_intervenci_n_psicol_gica_o_pedag_gica">Indica si recibes algún tipo de intervención psicológica o pedagógica</string>
    <string name="en_caso_afirmativo_desde_cuando_la_tomas">En caso afirmativo, ¿Desde cuando la tomas?</string>
    <string name="indica_si_tienes_alguna_dificultad_en_el_aprendizaje">Indica si tienes alguna dificultad en el aprendizaje</string>
    <string name="dificultad_en_el_aprendizaje">Dificultad en el aprendizaje</string>
    <string name="indica_si_tomas_alguna_medicaci_n">Indica si tomas alguna medicación</string>
    <string name="en_caso_afirmativo_a_qu_edad_te_diagnosticaron_tdah">En caso afirmativo, ¿A qué edad te diagnosticaron TDAH?</string>
    <string name="en_caso_afirmativo_indica_el_tipo">En caso afirmativo, indica el tipo</string>
    <string name="next">siguiente</string>
    <string name="content_description_next">flecha botón para avanzar en el formulario</string>
    <string name="a_adir">Añadir</string>
    <string name="mis_tareas">Mis tareas</string>
    <string name="mi_progreso">Mi progreso</string>
    <string name="consejos_y_ayuda">Consejos y ayuda</string>
    <string name="c_mo_estoy">Cómo estoy</string>
    <string name="fecha">Fecha:</string>
    <string name="porque">Porque...</string>
    <string name="enfadado">Enfadado</string>
    <string name="triste">Triste</string>
    <string name="cansado">Cansado</string>
    <string name="contento">Contento</string>
    <string name="emocionado">Emocionado</string>
    <string name="escribe_aqu_por_qu_te_has_sentido_as_hoy">Escribe aquí por qué te has sentido así</string>
    <string name="guardar">Guardar</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="hoy_has_completado_number_tareas">¡Hoy has completado $number tareas!</string>
    <string name="m_s_informaci_n">Más información</string>
    <string name="nueva_tarea">Nueva tarea</string>
    <string name="boton_para_a_adir_una_nueva_tarea">Boton para añadir una nueva tarea</string>
    <string name="categoria">Categoria</string>
    <string name="ver_en_el_calendario">Ver en el calendario</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_tareas_pendientes_activityy">TareasPendientesActivityy</string>
</resources>