<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="?attr/actionModeCloseDrawable"
            app:title="Cómo estoy hoy"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        tools:text="Fecha: 22 de Junio, 2023" />

    <Button
        android:id="@+id/buttonAngry"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawableTop="@drawable/ic_angry"
        android:focusable="true"
        android:text="@string/enfadado"
        app:backgroundTint="#E53935"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/buttonSad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate" />

    <Button
        android:id="@+id/buttonSad"
        android:layout_width="140dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="0dp"
        android:drawableTop="@drawable/ic_sad"
        android:text="@string/triste"
        app:backgroundTint="#00ACC1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAngry"
        app:layout_constraintTop_toTopOf="@id/buttonAngry" />

    <TextView
        android:id="@+id/emocion1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/enfadado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAngry" />

    <TextView
        android:id="@+id/emocion2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triste"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/emocion1Text"
        app:layout_constraintTop_toBottomOf="@+id/buttonSad" />

    <Button
        android:id="@+id/buttonTired"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:drawableTop="@drawable/ic_tired"
        android:focusable="true"
        android:text="@string/cansado"
        app:backgroundTint="#F4511E"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/buttonHappy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emocion1Text" />

    <Button
        android:id="@+id/buttonHappy"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:drawableTop="@drawable/ic_happy"
        android:focusable="true"
        android:text="@string/contento"
        app:backgroundTint="#7CB342"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonTired"
        app:layout_constraintTop_toTopOf="@+id/buttonTired" />

    <TextView
        android:id="@+id/emocion3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/cansado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTired" />

    <TextView
        android:id="@+id/emocion4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contento"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/emocion3Text"
        app:layout_constraintTop_toBottomOf="@+id/buttonTired" />

    <Button
        android:id="@+id/buttonExcited"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/ic_excited"
        android:text="@string/emocionado"
        app:backgroundTint="#FFEB3B"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emocion3Text" />

    <TextView
        android:id="@+id/emocion5Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emocionado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExcited" />

    <TextView
        android:id="@+id/textViewReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/porque"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonExcited" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldReason"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/escribe_aqu_por_qu_te_has_sentido_as_hoy"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReason">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldReason" />

</androidx.constraintlayout.widget.ConstraintLayout>
